update 05-agents & ppt

--- a/Sesión 04 - Introducción a LangChain/05_agents.ipynb
+++ b/Sesión 04 - Introducción a LangChain/05_agents.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +82,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nAnswer the following questions as best you can. You have access to the following tools:\\n\\n{tools}\\n\\nUse the following format:\\n\\nQuestion: the input question you must answer\\nThought: you should always think about what to do\\nAction: the action to take, should be one of [{tool_names}]\\nAction Input: the input to the action\\nObservation: the result of the action\\n... (this Thought/Action/Action Input/Observation can repeat N times)\\nThought: I now know the final answer\\nFinal Answer: the final answer to the original input question\\n\\nBegin!\\n\\nQuestion: {input}\\nThought:{agent_scratchpad}\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#PromptTemplate: hwchase17/react-chat\n",
     "\"\"\"\n",
@@ -121,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +197,7 @@
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
       "\u001b[32;1m\u001b[1;3m\n",
       "Thought: Do I need to use a tool? No\n",
-      "Final Answer: Hola Joaquin, ¡encantado de conocerte! ¿En qué puedo ayudarte?\u001b[0m\n",
+      "Final Answer: Hola Joaquin, ¡es un placer conocerte! ¿En qué puedo ayudarte?\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -194,10 +205,10 @@
     {
      "data": {
       "text/plain": [
-       "'Hola Joaquin, ¡encantado de conocerte! ¿En qué puedo ayudarte?'"
+       "'Hola Joaquin, ¡es un placer conocerte! ¿En qué puedo ayudarte?'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +231,7 @@
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
       "\u001b[32;1m\u001b[1;3m\n",
       "Thought: Do I need to use a tool? No\n",
-      "Final Answer: Sí, ya te dije que mi nombre es Joaquin. ¿En qué más puedo ayudarte?\u001b[0m\n",
+      "Final Answer: Por supuesto, Joaquin. ¡Es un placer conocerte!\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -228,16 +239,178 @@
     {
      "data": {
       "text/plain": [
-       "'Sí, ya te dije que mi nombre es Joaquin. ¿En qué más puedo ayudarte?'"
+       "'Por supuesto, Joaquin. ¡Es un placer conocerte!'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "agent_executor.invoke({\"input\": \"Sabes cómo me llamo?\"})['output']"
+    "agent_executor.invoke({\"input\": \"¿Recuerdas cómo me llamo?\"})['output']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Thought: Do I need to use a tool? Yes\n",
+      "Action: Current Search\n",
+      "Action Input: último partido de Colo Colo como local\u001b[0m\u001b[36;1m\u001b[1;3m{'title': 'Colo-Colo', 'rankings': '3rd in Chilean Primera División', 'thumbnail': 'https://serpapi.com/searches/65134c135f2203626a199f82/images/75b9dfc42bf701752d1de1fab635cd51550418d8a2dffbc1cc9b779ad9aa157f.png', 'game_spotlight': {'league': 'Chilean Primera División', 'stadium': 'Estadio Monumental David Arellano', 'date': 'Sat, Sep 23', 'stage': 'Full-time', 'teams': [{'name': 'Colo-Colo', 'thumbnail': 'https://serpapi.com/searches/65134c135f2203626a199f82/images/75b9dfc42bf701758ee74cd813b7ccf3cc8fd073f896289e93323494b218db922fb2af06b2f9a6268a42598f64143caf.png', 'score': '6'}, {'name': 'Cobresal', 'thumbnail': 'https://serpapi.com/searches/65134c135f2203626a199f82/images/75b9dfc42bf701758ee74cd813b7ccf3cc8fd073f896289e93323494b218db9289a5a6a16df35e6c012b8cacab33b782.png', 'score': '0'}]}}\u001b[0m\u001b[32;1m\u001b[1;3m Do I need to use a tool? No\n",
+      "Final Answer: El último partido de Colo Colo como local fue contra Cobresal, el marcador fue 6-0 a favor de Colo Colo.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'El último partido de Colo Colo como local fue contra Cobresal, el marcador fue 6-0 a favor de Colo Colo.'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent_executor.invoke({\"input\": \"¿Cual fue el marcador del último partido de Colo Colo como local?\"})['output']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo vanilla con tools personalizadas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "referencia: https://github.com/davila7/langchain-101/blob/main/agents/custom_functions_agents.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.chains.conversation.memory import ConversationBufferWindowMemory\n",
+    "\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tools\n",
+    "from langchain.utilities import SerpAPIWrapper\n",
+    "from langchain.agents import Tool\n",
+    "from langchain.tools import BaseTool\n",
+    "from langchain.agents import initialize_agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "turbo_llm = ChatOpenAI(\n",
+    "    temperature=0,\n",
+    "    model=\"gpt-3.5-turbo\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tools personalizadas\n",
+    "def extrae_nombre(name):\n",
+    "    return \"El nombre es \"+name\n",
+    "\n",
+    "def obtiene_tiempo(lugar):\n",
+    "    #llamado a la api wheater\n",
+    "    # POST como parametro el pais\n",
+    "    return \"No podemos acceder al clima en \"+lugar\n",
+    "\n",
+    "nombre_tool = Tool(\n",
+    "    name= \"extrae_nombre\",\n",
+    "    func=extrae_nombre,\n",
+    "    description=\"útil cuando queremos saber el nombre de una persona que participa en una conversación, input debería ser el primer nombre\"\n",
+    ")\n",
+    "\n",
+    "# Obtener el tiempo de un pais\n",
+    "tiempo_tool = Tool(\n",
+    "    name= \"tiempo\",\n",
+    "    func=obtiene_tiempo,\n",
+    "    description=\"útil cuando queremos saber el tiempo de un determinado pais, el input debe ser el nombre del pais\"\n",
+    ")\n",
+    "\n",
+    "# agregamos todos los tools al array\n",
+    "tools = [nombre_tool, tiempo_tool]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#memory\n",
+    "memory = ConversationBufferWindowMemory(\n",
+    "    memory_key=\"chat_history\",\n",
+    "    k=3,\n",
+    "    return_messages=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent = initialize_agent(\n",
+    "    agent=\"chat-conversational-react-description\",\n",
+    "    tools=tools,\n",
+    "    llm=turbo_llm,\n",
+    "    verbose=True,\n",
+    "    max_iteration=3,\n",
+    "    early_stop_method=\"generate\",\n",
+    "    memory=memory\n",
+    ")"
    ]
   },
   {
@@ -252,11 +425,15 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m\n",
-      "Thought: Do I need to use a tool? Yes\n",
-      "Action: Current Search\n",
-      "Action Input: último partido de Colo Colo como local\u001b[0m\u001b[36;1m\u001b[1;3m{'title': 'Colo-Colo', 'rankings': '3rd in Chilean Primera División', 'thumbnail': 'https://serpapi.com/searches/651337133c3fb215e7da4da5/images/75b9dfc42bf701752d1de1fab635cd51550418d8a2dffbc1cc9b779ad9aa157f.png', 'game_spotlight': {'league': 'Chilean Primera División', 'stadium': 'Estadio Monumental David Arellano', 'date': 'Sat, Sep 23', 'stage': 'Full-time', 'teams': [{'name': 'Colo-Colo', 'thumbnail': 'https://serpapi.com/searches/651337133c3fb215e7da4da5/images/75b9dfc42bf701758ee74cd813b7ccf3cc8fd073f896289e93323494b218db922fb2af06b2f9a6268a42598f64143caf.png', 'score': '6'}, {'name': 'Cobresal', 'thumbnail': 'https://serpapi.com/searches/651337133c3fb215e7da4da5/images/75b9dfc42bf701758ee74cd813b7ccf3cc8fd073f896289e93323494b218db9289a5a6a16df35e6c012b8cacab33b782.png', 'score': '0'}]}}\u001b[0m\u001b[32;1m\u001b[1;3m Do I need to use a tool? No\n",
-      "Final Answer: El último partido de Colo Colo como local fue contra Cobresal, el marcador fue 6-0 a favor de Colo Colo.\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m{\n",
+      "    \"action\": \"extrae_nombre\",\n",
+      "    \"action_input\": \"Bernardo\"\n",
+      "}\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3mEl nombre es Bernardo\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m{\n",
+      "    \"action\": \"Final Answer\",\n",
+      "    \"action_input\": \"El nombre de pila de Bernardo O'Higgins es Bernardo.\"\n",
+      "}\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -264,7 +441,7 @@
     {
      "data": {
       "text/plain": [
-       "'El último partido de Colo Colo como local fue contra Cobresal, el marcador fue 6-0 a favor de Colo Colo.'"
+       "\"El nombre de pila de Bernardo O'Higgins es Bernardo.\""
       ]
      },
      "execution_count": 23,
@@ -273,7 +450,47 @@
     }
    ],
    "source": [
-    "agent_executor.invoke({\"input\": \"¿Cual fue el marcador del último partido de Colo Colo como local?\"})['output']"
+    "agent.run(\"Cual es el nombre de pila de Bernardo Ohiggins?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m{\n",
+      "    \"action\": \"tiempo\",\n",
+      "    \"action_input\": \"Santiago de Chile\"\n",
+      "}\u001b[0m\n",
+      "Observation: \u001b[33;1m\u001b[1;3mNo podemos acceder al clima en Santiago de Chile\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m{\n",
+      "    \"action\": \"Final Answer\",\n",
+      "    \"action_input\": \"Lo siento, no puedo acceder al clima en Santiago de Chile en este momento.\"\n",
+      "}\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Lo siento, no puedo acceder al clima en Santiago de Chile en este momento.'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent.run(\"Me podrías decir el tiempo de Santiago de Chile hoy?\")"
    ]
   }
  ],
